tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  │ List ls -la
    Read foo.txt, bar.txt
