tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__full_access_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Enable full access?
  With full access, Codex edits any file on this machine and runs networked
  commands without approval. Exercise caution when enabling full access. This
  significantly increases the risk of data loss, leaks, or unexpected
  behavior.

› 1. Yes, continue anyway  Apply full access for this session
  2. Cancel                Go back without enabling full access

  Press enter to confirm or esc to go back
